2007-01-22  Tim Moore  <timoore@redhat.com>

	* Isa.java (getElfMachineType): New method.
	* IsaIA32.java (getElfMachineType): Implement it.
	* IsaX8664.java (getElfMachineType): ditto
	* IsaPPC.java (getElfMachineType): ditto
	* IsaPPC64.java (getElfMachineType): ditto
	* IsaFactory.java (IsaFactory, getIsa): Implement getIsa with a
	hash table instead of a big conditional.

2007-01-18  Tim Moore  <timoore@redhat.com>

	* Proc.java(getIsa, sendrecIsa): New interface for getting the ISA
	directly from a Proc object. 
	* DummyProc.java (sendrecIsa): implement it.
	* LinuxPtraceProc (sendrecIsa): ditto
	* IsaIA32.java (IsaIA32): Make class public.
	* IsaX8664.java (IsaX8664): ditto
	* IsaPPC.java (IsaPPC): ditto
	* IsaPPC64.java (IsaPPC64): ditto
	* MachineType.java (getMachineType): Use new Proc.getIsa interface
	instead of Uname.

2007-01-18  Mark Wielaard  <mark@klomp.org>

	* TestTaskObserverInstructionAndCode.java
	(TestObserver.updateTerminated): Explicitly fail().

2007-01-17  Nurdin Premji  <npremji@redhat.com>

	* TestLib.java (isChildOf): Changed to use Stat.ppid rather than proc.getParent().getPid().
	(StopEventLoopWhenChildProcRemoved): Removed.
		
2007-01-16  Nurdin Premji  <npremji@redhat.com>

	* TestRegisters.java (TestI386ModifyXXX): Changed to pass in a pid rather than
	use isChildOfMine.
	(TestPPC64ModifyXXX): Ditto.
	(TestX8664ModifyXXX): Ditto.
	(checkI386Modify): Updated.
	(checkPPC64Modify): Ditto.
	(checkX8664Modify): Ditto.
	
	* TestRun.java: Ran GNU formatter. 
	(testCreateAttachedContinuedProc): Changed to use StopEventLoopWhenProcRemoved.
	(testCreateAttachedStoppedProc): Ditto.
	
	* TestTaskObserverBlocked.java: Ran GNU formatter.
	(BlockingFibonacci.BlockingFibonacci): Changed to use StopEventLoopWhenProcRemoved.

2007-01-15  Nurdin Premji  <npremji@redhat.com>

	* TestTaskSyscallObserver.java: Ran GNU formatter.
	(testSyscallLoop): Changed to use StopEventLoopWhenProcRemoved.
	(testSyscallOpen): Ditto.
	(testSyscalls): Ditto.
	